--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.addressables": "2.4.6",
     "com.unity.ai.navigation": "2.0.7",
+    "com.unity.behavior": "1.0.10",
     "com.unity.cinemachine": "3.1.3",
     "com.unity.collab-proxy": "2.8.2",
     "com.unity.ide.rider": "3.0.31",
